force-app/main/default/objects/Account/fields/auto_number__c.field-meta.xml
<CustomField>
    <fullName>auto_number__c</fullName>
    <label>auto number</label>
    <type>AutoNumber</type>
</CustomField>