force-app/main/default/objects/Account/fields/Created_From_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_From_Date__c</fullName>
    <label>Created From Date</label>
    <type>Date</type>
</CustomField>