force-app/main/default/objects/Account/fields/Created_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_To_Date__c</fullName>
    <label>Created To Date</label>
    <type>Date</type>
</CustomField>