force-app/main/default/objects/Account/fields/Valid_Domain__c.field-meta.xml
<CustomField>
    <fullName>Valid_Domain__c</fullName>
    <description>This field was used to check the account valid domain</description>
    <label>Valid Domain</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>